@@ -470,6 +470,7 @@ EXTRA_DIST = \
   poke.map/nsmap-2.pk \
   poke.map/nsmap-3.pk \
   poke.map/nsmap-4.pk \
+  poke.map/nsmap-5.pk \
   poke.map/strict-attr-1.pk \
   poke.map/strict-attr-2.pk \
   poke.map/strict-attr-3.pk \
