@@ -1,5 +1,12 @@
 2021-03-13  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-gen.c (pkl_gen_pr_ass_stmt): Use SSET instead of
+	SSETI for values mapped in non-strict mode.
+	* testsuite/poke.map/nsmap-5.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
+2021-03-13  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* doc/poke.texi (Handling Incorrect Data): New section.
 
 2021-03-13  Jose E. Marchesi  <jemarch@gnu.org>
